[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Weapons/TheUltimateWeaponsPack_Sheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/hud/PlayerHUD.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/HealthBarOverlay.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/UI/UI001.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 40, 144, 14, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 141, 183, 38, 9 )

[sub_resource type="AtlasTexture" id=5]

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 232, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 72, 41, 13 )

[node name="HUD" type="MarginContainer"]
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerStats" type="MarginContainer" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.792157 )
margin_right = 306.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/PlayerStats"]
margin_right = 306.0
margin_bottom = 100.0
texture = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PlayerStats"]
margin_right = 306.0
margin_bottom = 100.0
custom_constants/margin_right = 25
custom_constants/margin_top = 30
custom_constants/margin_left = 25
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PlayerStats/MarginContainer"]
margin_left = 25.0
margin_top = 30.0
margin_right = 281.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="HBoxContainer" type="MarginContainer" parent="VBoxContainer/PlayerStats/MarginContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthBar" type="TextureProgress" parent="VBoxContainer/PlayerStats/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = SubResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = SubResource( 5 )
tint_progress = Color( 0.411765, 0.0823529, 0.0823529, 1 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_right = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PlayerStats/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 25.0
custom_constants/margin_left = 10

[node name="NameLabel" type="Label" parent="VBoxContainer/PlayerStats/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 3.0
margin_right = 256.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "DAGG"
valign = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PlayerStats/MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 256.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoneyLabel" type="Label" parent="VBoxContainer/PlayerStats/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Money: $100"
valign = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer/PlayerStats/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Score: 1000"
valign = 1

[node name="AmmoLabel" type="Label" parent="VBoxContainer/PlayerStats/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 172.0
margin_right = 256.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Ammo: 20/20"
valign = 1

[node name="WeaponSelector" type="CenterContainer" parent="VBoxContainer"]
margin_left = 310.0
margin_right = 400.0
margin_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/WeaponSelector"]
margin_right = 90.0
margin_bottom = 100.0
rect_min_size = Vector2( 90, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer"]
margin_right = 90.0
margin_bottom = 30.0

[node name="LeftSpace" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer2"]
margin_right = 26.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="WeaponBox1" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer2"]
margin_left = 30.0
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer2/WeaponBox1"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 7 )
expand = true

[node name="VBoxContainer" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer2/WeaponBox1"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer2/WeaponBox1/VBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="WeaponIcon" type="TextureRect" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer2/WeaponBox1/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
texture = SubResource( 8 )
expand = true
stretch_mode = 6

[node name="RightSpace" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 90.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer"]
margin_top = 34.0
margin_right = 90.0
margin_bottom = 64.0

[node name="WeaponBox4" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer/WeaponBox4"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 7 )
expand = true

[node name="VBoxContainer" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer/WeaponBox4"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer/WeaponBox4/VBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="WeaponIcon" type="TextureRect" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer/WeaponBox4/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
texture = SubResource( 8 )
expand = true
stretch_mode = 6

[node name="MiddleSpace" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 56.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WeaponBox2" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 90.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer/WeaponBox2"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 7 )
expand = true

[node name="VBoxContainer" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer/WeaponBox2"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer/WeaponBox2/VBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="WeaponIcon" type="TextureRect" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer/WeaponBox2/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
texture = SubResource( 8 )
expand = true
stretch_mode = 6

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer"]
margin_top = 68.0
margin_right = 90.0
margin_bottom = 98.0

[node name="LeftSpace" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer3"]
margin_right = 26.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="WeaponBox3" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer3"]
margin_left = 30.0
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer3/WeaponBox3"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 7 )
expand = true

[node name="VBoxContainer" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer3/WeaponBox3"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer3/WeaponBox3/VBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="WeaponIcon" type="TextureRect" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer3/WeaponBox3/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
texture = SubResource( 8 )
expand = true
stretch_mode = 6

[node name="RightSpace" type="MarginContainer" parent="VBoxContainer/WeaponSelector/VBoxContainer/HBoxContainer3"]
margin_left = 64.0
margin_right = 90.0
margin_bottom = 30.0
size_flags_horizontal = 3
